--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ flutter:
    - assets/images/work.png
    - assets/images/social.png
    - assets/images/study.png
+   - assets/images/others.png
+   - assets/images/emptypage.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
