edited existing code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   intl: ^0.16.1
   provider: ^4.3.2+1
   circular_check_box: ^1.0.4
+  fluttertoast: ^7.1.5
 
 
   # The following adds the Cupertino Icons font to your application.
