--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   provider: ^4.3.2+1
   circular_check_box: ^1.0.4
   fluttertoast: ^7.1.5
+  sqflite:
+  path:
+  shared_preferences: ^0.5.12+2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -65,6 +68,7 @@ flutter:
    - assets/images/study.png
    - assets/images/others.png
    - assets/images/emptypage.jpg
+   - assets/images/logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
