--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,16 +25,16 @@ dependencies:
     sdk: flutter
   intl: ^0.16.1
   provider: ^4.3.2+1
-  circular_check_box: ^1.0.4
+  roundcheckbox: ^2.0.1
   fluttertoast: ^7.1.5
   sqflite:
-  path:
-  shared_preferences: ^0.5.12+2
+  shared_preferences: 
   flutter_share:
   store_redirect:
   url_launcher:
+  path_provider: ^2.0.2
   flutter_local_notifications:
-  
+  dio: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -74,6 +74,7 @@ flutter:
    - assets/images/others.png
    - assets/images/empty.png
    - assets/images/logo.png
+   - assets/images/nodata.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
